# qatop

./: README.md  device_data.txt  pyproject.toml  qatctl  qatlib.py  qatop  qatop.py
debian/: changelog  control  copyright  rules  watch
debian/upstream/: metadata
